--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ a {
 p {
   margin: 0.75rem 0;
 }
+html{
+  scroll-behavior: smooth;
+}
+
 
 /* Utility classes */
 
@@ -67,6 +71,11 @@ p {
 .bg-dark{
   background: #333;
   color: #f4f4f4;
+}
+
+.bg-primary {
+  background: #7ab436;
+  color: white;
 }
 
 .l-heading {
@@ -196,4 +205,28 @@ p {
   display: block;
   margin: auto;
   width: 60%;
+}
+
+/* Section : Contact */
+
+#contact {
+  display: flex;
+}
+
+#contact .map, #contact .contact-form {
+  flex:1;
+}
+
+#contact .contact-form .form-group {
+  margin: 0.75rem;
+}
+
+#contact .contact-form label {
+  display: block;
+}
+
+#contact .contact-form input,
+#contact .contact-form textarea {
+  width: 100%;
+  padding: 0.5rem;
 }
